<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#454749"
        app:title="Creacion del Personaje"
        app:titleMarginStart="90dp"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="15dp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:srcCompat="@drawable/ic_launcher_background" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/escoge_la_clase"
            android:textSize="20dp" />

        <Spinner

            android:id="@+id/spinner_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginRight="250dp"
            android:background="@color/white"
            android:entries="@array/clase"
            android:padding="15dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/escoge_la_raza"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner_raza"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginRight="250dp"
            android:background="#FCFCFF"
            android:entries="@array/raza"
            android:padding="15dp"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="30dp"
            android:text="@string/escoge_la_edad"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner_edad"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="60dp"
            android:background="#FCFCFF"
            android:entries="@array/EstadoVital"
            android:padding="15dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/boton_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/siguiente"
            app:cornerRadius="5dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="250dp"/>
    </RelativeLayout>
</LinearLayout>